# adam

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  encode.bat  go.mod  go.sum
capture/: CMakeLists.txt  main.cpp
data/: shader.frag  song.yml
intro/: CMakeLists.txt  debug.h  main.c
previewer/: glhelpers.go  loadandwatch.go  previewer.go
